fix: Fixed min width for prices for a vertical better alignment

--- a/css/main.css
+++ b/css/main.css
@@ -500,6 +500,8 @@ header {
                     padding: calc(var(--spacer) * .25) calc(var(--spacer) * .5);
                     border-radius: var(--border-radius);
                     align-self: center;
+                    min-width: 3.5rem;
+                    text-align: center;
                 }
             }
         }
